data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4168.wast
;; 7. **Test Description**:    Incorrect Type Index Reference:    - Constraint: Confirm validity of `typeidx` within a loop context.    - Test Behavior: Create a loop where `call_indirect` uses a non-existent type index leading to trapping and avoiding infinite loop continuation.

(assert_invalid
  (module
    (table 1 funcref)
    (type (func (param i32)))
    (func (loop
      ;; Attempt to call_indirect with a non-existent type index
      (call_indirect (type 2) (i32.const 0))
      (br 0)
    ))
  )
  "unknown type"
)